# ComputerGraphics

./: .clang-format  .clang-tidy  CMakeCache.txt  CMakeLists.txt  Camera.h  Geometry.h  Intersect.cpp  Intersect.h  Makefile  ObjectProperties.h  README.md  Ray.cpp  Ray.h  Scene.cpp  Scene.h  Sphere.h  Vector.cpp  Vector.h  a.out  cmake_install.cmake  compile_commands.json  fluids.cpp  fluids.h  main.cpp  mesh.cpp  mesh.h  montecarlo.cpp  muian  muie  output  output.txt  perf.data.old  polygon.cpp  raytracer  raytracer.cpp  raytracer.h  run.sh
.cache/clangd/index/: Camera.h.5D4128D5659C5FB1.idx  Intersect.h.5797AD873F335F07.idx  ObjectProperties.h.561C4253DEF40270.idx  Ray.cpp.A397726B7FB7A1B1.idx  Ray.h.0A45127733DFC411.idx  Scene.cpp.6B2669B69460D766.idx  Scene.h.C48E3FC40B5DCB48.idx  Vector.cpp.1EBC6742845CF5BE.idx  Vector.h.C7E797D0D4718AAF.idx  arithmetic_ansi.h.65FF33C863601E51.idx  fluids.cpp.7F05768EF47FDD61.idx  lbfgs.c.F4EBC2995893B6F2.idx  lbfgs.h.8FCFB9A5F8A44C68.idx  main.cpp.52F3B69E94A9DC7E.idx  main.cpp.C377A2574F93E6C9.idx  mesh.cpp.410D026D935AB1B0.idx  mesh.h.E06A257E6057C814.idx  polygon.h.59ED6BF41B647003.idx  raytracer.cpp.089F29AA4AEF7CCA.idx  raytracer.cpp.4BA5D41A1ABB52D7.idx  raytracer.h.85C90564B526E8F7.idx  raytracer.h.87109DC2E1D7A89A.idx  stb_image.h.98739BCAD090DDBA.idx  stb_image.h.D688F89872EAAD35.idx  stb_image_write.h.CB25BDD626D15EC0.idx  stb_image_write.h.F859D70110AABFF6.idx
GeometryProcessing/: main.cpp
Raytracer/: CMakeLists.txt  Geometry.h  Intersect.h  compile_commands.json  mesh.cpp  mesh.h  raytracer.cpp  run.sh
Raytracer/build_directory/: CMakeCache.txt  Makefile  cmake_install.cmake  raytracer
image_processing/: main.cpp
